--- a/index.html
+++ b/index.html
@@ -15,25 +15,19 @@
     </header>
     <main>
         <!-- Search Section -->
-        <div class="input-group mt-5 mb-3 w-25 mx-auto">
-            <input type="text" class="form-control" placeholder="Enter a location for weather..."
+        <div class="input-group mt-5 mb-5 w-25 mx-auto">
+            <input id="input-city" type="text" class="form-control" placeholder="Enter a location for weather..."
                 aria-label="Enter a location for weather..." aria-describedby="button-addon2">
-            <button class="btn btn-primary btn-lg" type="button" id="button-search">Search</button>
+            <button onclick="getInput()" class="btn btn-primary btn-lg" type="button" id="button-search">Search</button>
         </div>
 
         <!-- Show Result -->
-        <div class="card mt-5 mx-auto" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-            </div>
+        <div id="display">
+            
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
