--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Forecast</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <style>
+        #spinner {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,10 +25,17 @@
                 aria-label="Enter a location for weather..." aria-describedby="button-addon2">
             <button onclick="getInput()" class="btn btn-primary btn-lg" type="button" id="button-search">Search</button>
         </div>
+        <!-- Spinner -->
+        <div id="spinner" class="text-center">
+            <div class="spinner-border text-info" style="width: 5rem; height: 5rem;" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+      
 
         <!-- Show Result -->
         <div id="display">
-            
+
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
